Add extra waits to fix tests